--- a/index.html
+++ b/index.html
@@ -12,7 +12,63 @@
       rel="stylesheet"
     />
     <script src="index.js" defer></script>
-    <title>Document</title>
+    <title>GameLoft</title>
   </head>
-  <body></body>
+
+  <body>
+    <div class="header">
+      <h1 class="header-title">GameLoft</h1>
+    </div>
+
+    <div class="picture_main">
+      <img class="picture" src="assets/banner.jpeg" alt="">
+      <div class="message">
+        <h2 class="picture-text">Welcome to <br/><span>GameLoft<span></span></h2>
+      </div>
+    </div>
+
+
+    <div class="nav">
+      <ul class="nav-list">
+        <li class="item_nav"><a href="#" class="links_nav signup">Sign Up</a></li>
+        <li class="item_nav"><a href="#" class="links_nav">Latest News</a></li>
+        <li class="item_nav"><a href="#latestRelease" class="links_nav">New Releases</a></li>
+        <li class="item_nav"><a href="#contact-us" class="links_nav">Contact</a></li>
+      </ul>
+    </div>
+
+
+
+    <section id="latestRelease" class="main">
+      <h2 class="header_main">Latest Releases</h2>
+      <p class="main_text">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, ad 
+        sint suscipit expedita voluptas dicta ullam! Eos non deserunt consequuntur 
+        eaque inventore nesciunt laudantium fuga, nisi, quibusdam nihil sit iure.
+      </p>
+      <div class="images">
+        <img src="assets/game1.jpeg" class="game_ad" alt="red dead redemption">
+        <img src="assets/game2.jpeg" class="game_ad" alt="GTA">
+        <img src="assets/game3.jpeg" class="game_ad" alt="midnight club">
+      </div>
+
+
+    </section>
+    <section class="contact-us" id="contact-us">
+      <h2 class="contact-header">Join Today</h2>
+      <p class="contact-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+      <p class="error-message">Please fields can't be empty</p>
+
+      <form class="forms" action="#">
+        <input type="text" class="form-input" name="name" id="name" placeholder="Enter your name">
+        <input type="email" class="form-input" name="email" id="email" placeholder="Enter your email">
+        <button type="submit" class="btn">Submit</button>
+      </form>
+    </section>
+
+
+    <div class="footer">
+      <p class="copyright">Copyright &#169; 2022 GameLoft</p>
+    </div>
+  </body>
 </html>
