--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section id="contact" class="details">
         <h2>Join Today</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-        <p class="error-prompt">Please fields cannot be empty</p>
+        <p class="errorPrompt">Please fields cannot be empty</p>
 
 
         <form action="">
