--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
         <form action="">
-            <input type="text" id="name" name="name" placeholder="Enter your name">
+            <input type="text" id="formname" name="name" placeholder="Enter your name">
             <input type="email" name="e-mail" id="e-mail" placeholder="Enter your e-mail">
 
             <button class="submission"> submit</button>
