--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <input type="text" id="formname" name="name" placeholder="Enter your name">
             <input type="email" name="e-mail" id="e-mail" placeholder="Enter your e-mail">
 
-            <button class="submission"> submit</button>
+            <button class="submission" type="submit"> submit</button>
         </form>
     </section>
 
